<resources>
    <string name="app_name">PMAYG</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">UserName</string>
    <string name="btn_login">Login</string>
    <string name="font_circular_medium">circular-medium.ttf</string>
    <string name="font_circular_bold">circular-bold.ttf</string>
    <string name="font_circular_book">circular-book.ttf</string>
    <string name="font_circular_black">circular-black.ttf</string>
    <string name="font_normal">din_pro_light.otf</string>
    <string name="no_internet">Your internet seems to be offline!</string>
    <string name="view_image">View Inspected Image</string>
    <string name="take_action">Take Action</string>
    <string name="view_action">View Action</string>
    <string name="action_taken_tv">Action Taken Against Inspection Report for High Value Project</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>

    <string name="close">Close</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_image_local">Save Image Local</string>
    <string name="please_enter_description">Please Enter Description</string>
    <string name="please_capture_image">Please Capture Image</string>
    <string name="maximum_three_photos">Maximum three Photo allowed</string>
    <string name="first_capture_image_add_another">First Capture Image then add another Image!</string>
    <string name="at_least_capture_one_photo">At least Capture one Photo</string>
    <string name="maximum_photos_reached">Maximum Photos Reached</string>
    <string name="how_many_photos_do_you_want_to_take">How many photos do you want to take?</string>
    <string name="software_designed_amp_developed_by_nic"><![CDATA[Software Designed & Developed by NIC]]></string>
    <string name="view_works">View Works</string>
    <string name="you_can_capture_upto_3_photos">You can Capture 3 Photos</string>
    <string name="work_list">Work List</string>
    <string name="cd_work_list">CD Work List</string>
    <string name="pmgsy">PMAYG</string>
    <string name="you_need_to_update_pmgsy">You need to update PMGSY</string>
    <string name="this_version_of_pmgsy_is_no_longer_supported_please_go_to_official_site_and_install_new_version">This version of PMGSY is no longer supported. Please go to Official Site and install new version</string>
    <string name="update">UPDATE</string>
    <string name="take_photo">Take Photo</string>
    <string name="registration">Registration</string>
    <string name="name">பெயர் / Name</string>
    <string name="district">மாவட்டம் / District</string>
    <string name="block">வட்டம் / Block</string>
    <string name="village">கிராமம் / Village</string>
    <string name="address">முகவரி / Address</string>
    <string name="date_of_birth">பிறந்த தேதி / Date Of birth</string>
    <string name="gender">பாலினம் / Gender</string>
    <string name="educational_qualification">கல்வி தகுதி / Educational Qualification</string>
    <string name="mobile_no">கைபேசி எண் / Mobile No</string>
    <string name="email_id">மின்னஞ்சல் முகவரி / Email Id</string>
    <string name="select_whether_the_applicant_is_motivator_others">விண்ணப்பதாரர் ஊக்குவிப்பவரா/மற்றவரா என்பதை தேர்வு செய்யவும் / Select whether the applicant is motivator/others</string>
    <string name="bank_account_no">வங்கி கணக்கு எண் / Bank Account NO</string>
    <string name="verify_your_account_no">உங்கள் வங்கி கணக்கு எண்ணை சரிபார்க்கவும் / Verify Your Account NO</string>
    <string name="ifsc_ifsc_code">IFSC குறியீடு / IFSC Code</string>
    <string name="bank_name">வங்கி பெயர் / Bank Name</string>
    <string name="bank_branch_name">வங்கி கிளை பெயர் / Bank Branch Name</string>
    <string name="number_of_state_level_training_attended">கலந்துகொண்ட மாநில அளவிலான பயிற்சியின் எண்ணிக்கை / Number of State Level training Attended</string>
    <string name="number_of_district_level_training_attended">கலந்து கொண்ட மாவட்ட அளவிலான பயிற்சியின் எண்ணிக்கை / Number of District Level training Attended</string>
    <string name="number_of_block_level_training_attended">கலந்து கொண்ட தொகுதி அளவிலான பயிற்சியின் எண்ணிக்கை / Number of Block Level training Attended</string>
    <string name="category">வகை / Category</string>
    <string name="position">நிலை / Position</string>
    <string name="register">பதிவு செய் / Register</string>
    <string name="home_page">Home Page</string>
    <string name="pending_works_for_upload">Pending works for Upload</string>
    <string name="sync">Sync</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="photograph_remark">Photograph Remark</string>
    <string name="account_login">Account Login</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user">New User ?</string>
    <string name="register_1">Register !</string>
    <string name="pending_list">Pending List</string>
    <string name="village_list">Village List</string>
    <string name="no_projects_found">No Projects Found!</string>
    <string name="view_online_image">View Online Image</string>
    <string name="view_cd_works">View CD Works</string>
    <string name="last_visited_date">Last Visited Date</string>
    <string name="amount_spent_so_far">Amount Spent So Far</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="community">Community</string>
    <string name="gender_en">Gender</string>
    <string name="village_en">Village</string>
    <string name="block_en">Block</string>
    <string name="current_stage">Current Stage</string>
    <string name="beneficiary_nname">Beneficiary \nName</string>
    <string name="work_name">Work Name</string>
    <string name="work_group_name">Work Group Name</string>
    <string name="agency_name">Agency Name</string>
    <string name="financial_year">Financial Year</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="scheme_group_name">Scheme Group Name</string>
    <string name="view_offline_image">View Offline Image</string>
    <string name="hide_show_icon">hide_show_icon</string>
    <string name="camera_icon">camera_icon</string>
    <string name="name_of_the_tank">Name of the tank</string>
    <string name="cd_work_no">Cd Work no</string>
    <string name="stage">Stage</string>
    <string name="work_id">Work Id</string>
    <string name="upload_icon">upload_icon</string>
    <string name="back_icon">back_icon</string>
    <string name="header_icon">header_icon</string>
    <string name="edit_icon">edit_icon</string>
    <string name="motivator">Motivator</string>
    <string name="others">Others</string>
    <string name="tick_icon">tick_icon</string>
    <string name="select_scheme">Select Scheme</string>
    <string name="logo_icon">logo_icon</string>
    <string name="design_icon">design_icon</string>
    <string name="profile_icon">profile_icon</string>
    <string name="password_icon">password_icon</string>
    <string name="visible_icon">visible_icon</string>
    <string name="logout_icon">logout_icon</string>
    <string name="loading_icon">loading_icon</string>
    <string name="loading">Loading…</string>
    <string name="close_icon">close_icon</string>
    <string name="home_icon">home_icon</string>
    <string name="select_stage">Select Stage</string>
    <string name="image_preview_icon">image_preview_icon</string>
    <string name="enter_description">Enter Description</string>
    <string name="save_image">SAVE IMAGE</string>
    <string name="alert_icon">alert_icon</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="village_name_icon">village_name_icon</string>
    <string name="cd_work_name">CD Work Name</string>
    <string name="chainage">Chainage</string>
    <string name="work_stage">Work Stage</string>
    <string name="select_financial_year">Select Financial Year</string>
    <string name="habitation_name">Habitation Name</string>
    <string name="version">Version</string>
    <string name="add_your_working_area">Willing To Serve</string>

</resources>
