<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?actionBarSize">



        <TextView
            android:visibility="visible"
            android:id="@+id/close"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_create_asset_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#CCC"
        android:layout_below="@+id/cancel_button"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/you_can_capture_upto_3_photos"
        android:textSize="@dimen/menu_title_size"
        android:visibility="visible"
        tools:ignore="SpUsage" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_create_asset_title"
        android:layout_above="@+id/bottom_layout"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <LinearLayout
                android:id="@+id/mobile_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_layout"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:id="@+id/btn_add"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/add_photo"
            android:src="@drawable/ic_add_plus_icon"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:focusable="true" />


        <RelativeLayout
            android:padding="@dimen/_3sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            >
            <Button

                android:background="@color/full_transparent"
                android:id="@+id/btn_save_inspection"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/save_image_local"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>