<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="activity"
        type="com.nic.ODF_Thittam.activity.CameraScreen" />
</data>
<RelativeLayout
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/font_circular_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/take_photo"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:tint="@color/white"
            android:onClick="@{()-> activity.onBackPress()}"
            android:src="@mipmap/back_arrow"
            android:contentDescription="@string/back_icon" />

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:tint="@color/white"
            android:onClick="@{()-> activity.homePage()}"
            android:src="@mipmap/home_img"
            android:contentDescription="@string/home_icon" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        android:layout_below="@+id/header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/alert_severity_title"
            style="@style/font_circular_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_20dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginRight="@dimen/margin_left_20dp"
            android:text="@string/select_stage"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customfontdemo:cardCornerRadius="@dimen/_10sdp"
                customfontdemo:cardBackgroundColor="@color/white"
                android:layout_marginLeft="@dimen/margin_left_20dp"
                android:layout_marginTop="@dimen/padding"
                android:outlineSpotShadowColor="@color/colorPrimaryDark"
                android:outlineAmbientShadowColor="@color/colorPrimaryDark"
                android:layout_marginRight="@dimen/margin_left_20dp"
                tools:ignore="UnusedAttribute">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                style="@style/font_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="15dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:visibility="visible"
                tools:ignore="RelativeOverlap" />

            <Spinner
                android:id="@+id/stage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center" />

        </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_1"
                android:layout_gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/how_many_photos_do_you_want_to_take"/>


            <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/count_recycler"
            android:layout_marginTop="@dimen/_10sdp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">


            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/district_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"
                    android:layout_marginTop="15dp"
                    card_view:cardCornerRadius="5dp"
                    card_view:cardElevation="5dp">


                    <LinearLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_view_preview"
                                android:layout_width="match_parent"
                                android:layout_height="170dp"
                                android:background="@drawable/capture_image"
                                android:onClick="@{()-> activity.getLatLong()}"
                                android:scaleType="fitXY"
                                android:contentDescription="@string/image_preview_icon"
                                tools:ignore="TooDeepLayout" />

                            <ImageView
                                android:id="@+id/image_view"
                                android:layout_width="match_parent"
                                android:layout_height="170dp"
                                android:scaleType="fitXY"
                                android:onClick="@{()-> activity.getLatLong()}"
                                android:visibility="gone"
                                android:contentDescription="@string/image_preview_icon" />


                            <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="0.5dp"-->
                            <!--android:layout_gravity="bottom"-->
                            <!--android:layout_marginLeft="15dp"-->
                            <!--android:background="@color/dashboard_line_dark" />-->


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:orientation="horizontal">


                                <EditText
                                    android:id="@+id/description"
                                    style="@style/font_circular_bold"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dip"
                                    android:layout_marginTop="10dip"
                                    android:layout_marginRight="10dip"
                                    android:background="@android:color/transparent"
                                    android:gravity="top"
                                    android:hint="@string/enter_description"
                                    android:lines="6"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp"
                                    android:importantForAutofill="no"
                                    android:inputType="text" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"

                android:background="@drawable/rectangle_box"
                android:text="@string/save_image"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />
        </RelativeLayout>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>

</layout>